feat: SideMenuBar UI 컴포넌트 구현 완료 및 헤더 컴포넌트 오타 수정, 버튼 css 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -125,6 +125,11 @@ table {
   border-spacing: 0;
 }
 
+a {
+  text-decoration: none;
+  color: var(--black-600);
+}
+
 html,
 body {
   width: 100%;
